--- a/mod2_solution/styles/style.css
+++ b/mod2_solution/styles/style.css
@@ -1,35 +1,43 @@
 /********** Base styles **********/
 * {
     box-sizing: border-box;
+    font-size: medium;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
     margin-bottom: 15px;
     text-align: center;
+    font-size: 175%;
 }
 
 h2 {
     margin: auto;
     position: absolute;
-    border: 2px solid black;
+    border: 1px solid black;
     width: 180px;
     text-align: center;
     right: 15px;
+    padding: 5px;
+    font-size: 125%;
 }
 
 .card {
-    padding: 15px;
+    padding: 15px 0px 15px 0px;
     position: relative;
 }
 
 p {
-    border: 2px solid black;
+    border: 1px solid black;
     background-color: lightgray;
-    height: 240px;
+    height: 216px;
     margin-block-start: auto;
     margin-block-end: auto;
     padding: 10px;
-    padding-top: 40px;
+    padding-top: 45px;
     font-family: Helvetica;
 }
 
